Maven publishing, code cleanup