@@ -21,8 +21,7 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
-
-/********************************************************************
+/**
  * Implementation of a bidirectional mapping between keys and values. Internally
  * this mapping is realized with two instances of standard one-way maps, one for
  * the normal key-to-value mapping and another for the reverse mapping. Like the
@@ -33,34 +32,30 @@ import java.util.Set;
  * extended bidirectional methods an application must implement thread-safe
  * modifications by itself.
  *
- * <p><b>Attention:</b> This implementation is NOT safe for modifications by
+ * <p>
+ * <b>Attention:</b> This implementation is NOT safe for modifications by
  * element views (like {@link #keySet()}, {@link #values()}, or {@link
  * #entrySet()}) or iterators of these. Modifying a bidirectional map through
  * such a view may cause unpredictable behavior. Applications should always use
- * the direct modifying methods of this class instead.</p>
+ * the direct modifying methods of this class instead.
+ * </p>
  *
  * @author eso
  */
-public class BidirectionalMap<K, V> implements Map<K, V>
-{
-	//~ Instance fields --------------------------------------------------------
-
+public class BidirectionalMap<K, V> implements Map<K, V> {
 	private final Map<K, V> aKeyToValueMap;
 	private final Map<V, K> aValueToKeyMap;
 
-	//~ Constructors -----------------------------------------------------------
-
-	/***************************************
+	/**
 	 * Creates a new bidirectional map instance that uses instances of {@link
 	 * HashMap} for both mapping directions.
 	 */
-	public BidirectionalMap()
-	{
+	public BidirectionalMap() {
 		aKeyToValueMap = new HashMap<K, V>();
 		aValueToKeyMap = new HashMap<V, K>();
 	}
 
-	/***************************************
+	/**
 	 * Creates a new bidirectional map instance with (optionally) distinct map
 	 * types for the different mapping directions.
 	 *
@@ -70,101 +65,87 @@ public class BidirectionalMap<K, V> implements Map<K, V>
 	 *                           value-to-key mapping
 	 */
 	public BidirectionalMap(
-		Class<? extends Map<K, V>> rKeyToValueMapType,
-		Class<? extends Map<V, K>> rValueToKeyMapType)
-	{
-		try
-		{
-			aKeyToValueMap = rKeyToValueMapType.newInstance();
-			aValueToKeyMap = rValueToKeyMapType.newInstance();
-		}
-		catch (Exception e)
-		{
+			Class<? extends Map<K, V>> rKeyToValueMapType,
+			Class<? extends Map<V, K>> rValueToKeyMapType) {
+		try {
+			aKeyToValueMap = rKeyToValueMapType.getConstructor().newInstance();
+			aValueToKeyMap = rValueToKeyMapType.getConstructor().newInstance();
+		} catch (Exception e) {
 			throw new IllegalArgumentException("Invalid map class", e);
 		}
 	}
 
-	//~ Methods ----------------------------------------------------------------
-
-	/***************************************
+	/**
 	 * @see Map#clear()
 	 */
 	@Override
-	public void clear()
-	{
+	public void clear() {
 		aKeyToValueMap.clear();
 		aValueToKeyMap.clear();
 	}
 
-	/***************************************
+	/**
 	 * @see Map#containsKey(java.lang.Object)
 	 */
 	@Override
-	public boolean containsKey(Object rKey)
-	{
+	public boolean containsKey(Object rKey) {
 		return aKeyToValueMap.containsKey(rKey);
 	}
 
-	/***************************************
+	/**
 	 * For better performance this lookup is done on the reverse mapping.
 	 *
 	 * @see Map#containsValue(java.lang.Object)
 	 */
 	@Override
-	public boolean containsValue(Object rValue)
-	{
+	public boolean containsValue(Object rValue) {
 		return aValueToKeyMap.containsKey(rValue);
 	}
 
-	/***************************************
+	/**
 	 * @see Map#entrySet()
 	 */
 	@Override
-	public Set<Entry<K, V>> entrySet()
-	{
+	public Set<Entry<K, V>> entrySet() {
 		return aKeyToValueMap.entrySet();
 	}
 
-	/***************************************
+	/**
 	 * @see Map#get(java.lang.Object)
 	 */
 	@Override
-	public V get(Object rKey)
-	{
+	public V get(Object rKey) {
 		return aKeyToValueMap.get(rKey);
 	}
 
-	/***************************************
+	/**
 	 * Returns the key for a value from the reverse mapping.
 	 *
-	 * @param  rValue An arbitrary value object to get the key for
+	 * @param rValue An arbitrary value object to get the key for
 	 *
 	 * @return The key for the given value or NULL if the value does not exist
 	 */
-	public K getKey(Object rValue)
-	{
+	public K getKey(Object rValue) {
 		return aValueToKeyMap.get(rValue);
 	}
 
-	/***************************************
+	/**
 	 * @see Map#isEmpty()
 	 */
 	@Override
-	public boolean isEmpty()
-	{
+	public boolean isEmpty() {
 		return aKeyToValueMap.isEmpty();
 	}
 
-	/***************************************
+	/**
 	 * @see Map#keySet()
 	 */
 	@Override
-	public Set<K> keySet()
-	{
+	public Set<K> keySet() {
 		return aKeyToValueMap.keySet();
 	}
 
-	/***************************************
+	/**
 	 * Adds the key/value pair to the standard and reverse mappings. Because
 	 * mapping keys must be unique an existing mapping will be replaced with the
 	 * new one. This will happen in both mapping directions so that it is
@@ -176,30 +157,26 @@ public class BidirectionalMap<K, V> implements Map<K, V>
 	 * that added mappings are unique in both directions unless the desribed
 	 * behavior is acceptable.
 	 *
-	 * @param  rKey   The mapping key (for the standard mapping direction)
-	 * @param  rValue The mapping value (for the standard mapping direction)
+	 * @param rKey   The mapping key (for the standard mapping direction)
+	 * @param rValue The mapping value (for the standard mapping direction)
 	 *
 	 * @return The first (in case two mappings are affected) value that has been
 	 *         replaced or NULL if it is a new entry
 	 */
 	@Override
-	public V put(K rKey, V rValue)
-	{
+	public V put(K rKey, V rValue) {
 		V rReplacedValue = aKeyToValueMap.put(rKey, rValue);
 
-		if (rReplacedValue != null)
-		{
+		if (rReplacedValue != null) {
 			aValueToKeyMap.remove(rReplacedValue);
 		}
 
 		K rReplacedKey = aValueToKeyMap.put(rValue, rKey);
 
-		if (rReplacedKey != null)
-		{
+		if (rReplacedKey != null) {
 			aKeyToValueMap.remove(rReplacedKey);
 
-			if (rReplacedValue == null)
-			{
+			if (rReplacedValue == null) {
 				rReplacedValue = rValue;
 			}
 		}
@@ -207,71 +184,63 @@ public class BidirectionalMap<K, V> implements Map<K, V>
 		return rReplacedValue;
 	}
 
-	/***************************************
+	/**
 	 * @see Map#putAll(Map)
 	 */
 	@Override
-	public void putAll(Map<? extends K, ? extends V> rMap)
-	{
-		for (Entry<? extends K, ? extends V> e : rMap.entrySet())
-		{
+	public void putAll(Map<? extends K, ? extends V> rMap) {
+		for (Entry<? extends K, ? extends V> e : rMap.entrySet()) {
 			put(e.getKey(), e.getValue());
 		}
 	}
 
-	/***************************************
+	/**
 	 * @see Map#remove(java.lang.Object)
 	 */
 	@Override
-	public V remove(Object rKey)
-	{
+	public V remove(Object rKey) {
 		V rRemoved = aKeyToValueMap.remove(rKey);
 
-		if (rRemoved != null)
-		{
+		if (rRemoved != null) {
 			aValueToKeyMap.remove(rRemoved);
 		}
 
 		return rRemoved;
 	}
 
-	/***************************************
+	/**
 	 * Return the entry set of the reverse mapping.
 	 *
 	 * @return A set view of the reverse mappings in this map
 	 */
-	public Set<Entry<V, K>> reverseEntrySet()
-	{
+	public Set<Entry<V, K>> reverseEntrySet() {
 		return aValueToKeyMap.entrySet();
 	}
 
-	/***************************************
+	/**
 	 * @see Map#size()
 	 */
 	@Override
-	public int size()
-	{
+	public int size() {
 		return aKeyToValueMap.size();
 	}
 
-	/***************************************
+	/**
 	 * Returns a string description of this instance.
 	 *
 	 * @see Object#toString()
 	 */
 	@Override
-	public String toString()
-	{
+	public String toString() {
 		return getClass().getName() + "[" + aKeyToValueMap + "," +
-			   aValueToKeyMap + "]";
+				aValueToKeyMap + "]";
 	}
 
-	/***************************************
+	/**
 	 * @see Map#values()
 	 */
 	@Override
-	public Collection<V> values()
-	{
+	public Collection<V> values() {
 		return aValueToKeyMap.keySet();
 	}
 }
