@@ -16,84 +16,75 @@
 //++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 package de.esoco.lib.expression;
 
-import junit.framework.TestCase;
-
-import de.esoco.lib.expression.function.RelationTokenFormat;
-
-import java.text.DecimalFormat;
-import java.text.SimpleDateFormat;
-
-import java.util.Arrays;
-import java.util.Date;
-
-import org.obrel.core.Relatable;
-import org.obrel.core.RelatedObject;
-
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.obrel.type.StandardTypes.CHILDREN;
 import static org.obrel.type.StandardTypes.DATE;
 import static org.obrel.type.StandardTypes.NAME;
 import static org.obrel.type.StandardTypes.PORT;
 
+import java.text.DecimalFormat;
+import java.text.SimpleDateFormat;
+import java.util.Arrays;
+import java.util.Date;
 
-/********************************************************************
+import org.junit.jupiter.api.Test;
+import org.obrel.core.Relatable;
+import org.obrel.core.RelatedObject;
+
+import de.esoco.lib.expression.function.RelationTokenFormat;
+
+/**
  * TokenStringFormat Test
  *
  * @author eso
  */
-public class RelationTokenFormatTest extends TestCase
-{
-	//~ Methods ----------------------------------------------------------------
-
-	/***************************************
+public class RelationTokenFormatTest {
+	/**
 	 * Test of TokenStringFormat instances.
 	 */
-	@SuppressWarnings("boxing")
-	public void testTokenStringFormat()
-	{
-		Date			    aDate	   = new Date();
-		Integer			    aInt	   = new Integer(42);
-		Relatable		    aRelatable = newRelatedObject(aDate, aInt);
+	@Test
+	void testTokenStringFormat() {
+		Date aDate = new Date();
+		Integer aInt = Integer.valueOf(42);
+		Relatable aRelatable = newRelatedObject(aDate, aInt);
 		RelationTokenFormat aFormat;
-		String			    sFormat;
+		String sFormat;
 
 		aRelatable.set(CHILDREN,
-					   Arrays.asList(newRelatedObject(aDate, 1),
-									 newRelatedObject(aDate, 2)));
+				Arrays.asList(newRelatedObject(aDate, 1),
+						newRelatedObject(aDate, 2)));
 
-		aFormat =
-			new RelationTokenFormat("{NAME}: {NAME:&{length():F%03d}}, " +
-									"{NAME:&{substring(0,5):&{substring(2,4):F%-4s]}}}");
+		aFormat = new RelationTokenFormat("{NAME}: {NAME:&{length():F%03d}}, " +
+				"{NAME:&{substring(0,5):&{substring(2,4):F%-4s]}}}");
 		assertEquals("1234567890: 010, 34  ]", aFormat.evaluate(aRelatable));
 
 		sFormat = "yy-MM-dd HH:mm.ss";
 		aFormat = new RelationTokenFormat("{DATE:D" + sFormat + "}");
 
 		assertEquals(new SimpleDateFormat(sFormat).format(aDate),
-					 aFormat.evaluate(aRelatable));
+				aFormat.evaluate(aRelatable));
 
 		sFormat = "000.00";
 		aFormat = new RelationTokenFormat("{PORT:N" + sFormat + "}");
 
 		assertEquals(new DecimalFormat(sFormat).format(aInt),
-					 aFormat.evaluate(aRelatable));
+				aFormat.evaluate(aRelatable));
 
-		aFormat =
-			new RelationTokenFormat("{CHILDREN:&{size()}}-" +
-									"{CHILDREN:&{get(0):&{PORT}}}-" +
-									"{CHILDREN:&{get(1):&{PORT}}}");
+		aFormat = new RelationTokenFormat("{CHILDREN:&{size()}}-" +
+				"{CHILDREN:&{get(0):&{PORT}}}-" +
+				"{CHILDREN:&{get(1):&{PORT}}}");
 		assertEquals("2-1-2", aFormat.evaluate(aRelatable));
 	}
 
-	/***************************************
+	/**
 	 * Creates a new test object.
 	 *
-	 * @param  aDate The date
-	 * @param  aInt  The int
+	 * @param aDate The date
+	 * @param aInt  The int
 	 *
 	 * @return The new object
 	 */
-	private Relatable newRelatedObject(Date aDate, Integer aInt)
-	{
+	private Relatable newRelatedObject(Date aDate, Integer aInt) {
 		Relatable aRelatable = new RelatedObject();
 
 		aRelatable.set(NAME, "1234567890");
